# FreeCAD-BulletPhysics

./: BulletUtils.py  InitGui.py  README.md  package.xml  pyproject.toml
commands/: CmdAddLauncher.py  CmdAddRigidBody.py  CmdCreateContainer.py  CmdDowngrade.py  CmdRunSimulation.py
example/: example.20260510-173726.FCBak  example.20260516-232105.FCBak  example.FCStd  example_bullet_cache.json
freecad/BulletPhysics/: BulletUtils.py  InitGui.py  init_gui.py
freecad/BulletPhysics/commands/: CmdAddLauncher.py  CmdAddRigidBody.py  CmdCreateContainer.py  CmdDowngrade.py  CmdRunSimulation.py
freecad/BulletPhysics/objects/: BulletBodyTable.py  BulletContainer.py  BulletLauncher.py  BulletWorld.py  RigidBody.py
freecad/BulletPhysics/preferences/: BulletPreferences.py
freecad/BulletPhysics/simulation/: BulletSimulation.py
objects/: BulletBodyTable.py  BulletContainer.py  BulletLauncher.py  BulletWorld.py  RigidBody.py
preferences/: BulletPreferences.py
simulation/: BulletSimulation.py
