<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<package format="1">
  <name>Bullet Physics</name>
  <description>Rigid-body physics simulation powered by pybullet.</description>
  <version>1.0.0</version>
  <date>2026-06-05</date>
  <maintainer email="andythe_great@protonmail.com">Kavin Teenakul</maintainer>
  <license file="LICENSE">GPL-3.0-or-later</license>
  <url type="repository" branch="main">https://github.com/kevinsmia1939/FreeCAD-BulletPhysics</url>
  <url type="readme">https://github.com/kevinsmia1939/FreeCAD-BulletPhysics/raw/main/README.md</url>

  <content>
    <workbench>
      <classname>Bullet Physics Workbench</classname>
      <description>Rigid-body physics simulation powered by pybullet.</description>
      <subdirectory>./</subdirectory>
      <icon>icons/BulletPhysics.svg</icon>
      <depend>pybullet</depend>
      <tag>simulation</tag>
      <tag>physics</tag>
    </workbench>
  </content>

</package>
